fixed html issues

--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
 							Переводы на русский язык
 						</a>
 					</li>
-
-					</li>
 					<li class="summary-item">
 						<a href="#hero-prototype">Прообразы героев</a>
 					</li>
@@ -43,7 +41,7 @@
 
 		</header>
 		<main>
-			<img class="img-litle-prince" width="30%" src="./img/LePetitPrince.jpeg" alt="Ма́ленький принц">
+			<img class="img-litle-prince" src="./img/LePetitPrince.jpeg" alt="Ма́ленький принц">
 			<div class="introduction">
 				<p>«Ма́ленький принц» (фр. Le Petit Prince) — аллегорическая повесть-сказка, наиболее известное произведение
 					<a href="https://ru.wikipedia.org/wiki/%D0%A1%D0%B5%D0%BD%D1%82-%D0%AD%D0%BA%D0%B7%D1%8E%D0%BF%D0%B5%D1%80%D0%B8,_%D0%90%D0%BD%D1%82%D1%83%D0%B0%D0%BD_%D0%B4%D0%B5" target="_blank">Антуана де Сент-Экзюпери</a>
