Linked figma maket to index.html

--- a/index.html
+++ b/index.html
@@ -257,6 +257,9 @@
 				</p>
 			</div>
 		</main>
+		<footer>
+			<a href="./article.html" target="_blank">!!!!!! FIGMA ARTICLE !!!!!</a>
+		</footer>
 	</div>
 </body>
 
