--- a/index.html
+++ b/index.html
@@ -13,28 +13,28 @@
 	<div class="wrapper">
 		<header>
 			<h1 id="heading">Маленький принц</h1>
-			<h2>Содержание</h2>
+			<h2 class="h2-little-prince">Содержание</h2>
 			<div class="summary">
 				<ol class="summary-list">
 					<li class="summary-item">
-						<a href="#publication">История публикаций</a>
+						<a class="a-little-prince" href="#publication">История публикаций</a>
 					</li>
 					<li class="summary-item">
-						<a href="#plot">Сюжет</a>
+						<a class="a-little-prince" href="#plot">Сюжет</a>
 					</li>
 					<li class="summary-item">
-						<a href="#transtaltion">Переводы</a>
+						<a class="a-little-prince" href="#transtaltion">Переводы</a>
 
 					<li class="summary-item">
-						<a href="#russian-translation">
+						<a class="a-little-prince" href="#russian-translation">
 							Переводы на русский язык
 						</a>
 					</li>
 					<li class="summary-item">
-						<a href="#hero-prototype">Прообразы героев</a>
+						<a class="a-little-prince" href="#hero-prototype">Прообразы героев</a>
 					</li>
 					<li class="summary-item">
-						<a href="#screening">Экранизации и постановки</a>
+						<a class="a-little-prince" href="#screening">Экранизации и постановки</a>
 					</li>
 				</ol>
 			</div>
@@ -43,8 +43,8 @@
 		<main>
 			<img class="img-litle-prince" src="./img/LePetitPrince.jpeg" alt="Ма́ленький принц">
 			<div class="introduction">
-				<p>«Ма́ленький принц» (фр. Le Petit Prince) — аллегорическая повесть-сказка, наиболее известное произведение
-					<a href="https://ru.wikipedia.org/wiki/%D0%A1%D0%B5%D0%BD%D1%82-%D0%AD%D0%BA%D0%B7%D1%8E%D0%BF%D0%B5%D1%80%D0%B8,_%D0%90%D0%BD%D1%82%D1%83%D0%B0%D0%BD_%D0%B4%D0%B5" target="_blank">Антуана де Сент-Экзюпери</a>
+				<p class="p-little-prince">«Ма́ленький принц» (фр. Le Petit Prince) — аллегорическая повесть-сказка, наиболее известное произведение
+					<a class="a-little-prince" href="https://ru.wikipedia.org/wiki/%D0%A1%D0%B5%D0%BD%D1%82-%D0%AD%D0%BA%D0%B7%D1%8E%D0%BF%D0%B5%D1%80%D0%B8,_%D0%90%D0%BD%D1%82%D1%83%D0%B0%D0%BD_%D0%B4%D0%B5" target="_blank">Антуана де Сент-Экзюпери</a>
 
 					Сказка рассказывает о Маленьком принце, который посещает различные планеты в космосе, включая Землю.
 					Книга
@@ -68,8 +68,8 @@
 				</p>
 			</div>
 			<div class="history">
-				<h2 id="publication" class="h2-heading">История публикаций</h2>
-				<p>
+				<h2 class="h2-little-prince" id="publication" class="h2-heading">История публикаций</h2>
+				<p class="p-little-prince">
 					Сент-Экзюпери написал повесть, живя в Нью-Йорке, куда переехал после того, как нацистская Германия
 					оккупировала Францию, и поэтому самая первая публикация книги, выпущенная издательством
 					«Рэйнал-энд-Хичкок»
@@ -90,13 +90,13 @@
 				</p>
 			</div>
 			<div class="plot">
-				<h2 id="plot" class="h2-heading">Сюжет</h2>
-				<p>
+				<h2 class="h2-little-prince" id="plot" class="h2-heading">Сюжет</h2>
+				<p class="p-little-prince">
 					Пилот совершает вынужденную посадку в пустыне Сахара и встречает одного необыкновенного и загадочного
 					мальчика — Маленького принца с другой планеты — астероида Б-612. Маленький принц рассказывает о своих
 					приключениях на Земле, говорит об удивительной розе, которую оставил на своей малой планете, о своей
 					жизни
-					на астероиде, где есть три вулкана: два действующих и один потухший, и роза (это была <a
+					на астероиде, где есть три вулкана: два действующих и один потухший, и роза (это была <a class="a-little-prince"
 						href="https://ru.wikipedia.org/wiki/%D0%A0%D0%B0%D0%B7%D1%83%D0%BC%D0%BD%D1%8B%D0%B5_%D1%80%D0%B0%D1%81%D1%82%D0%B5%D0%BD%D0%B8%D1%8F" target="_blank">красавица с шипами </a> — гордая, обидчивая и простодушная. Маленький принц полюбил
 					её,
 					но она казалась ему капризной, жестокой и высокомерной). Он проводит время, приводя в порядок свою
@@ -115,8 +115,8 @@
 				</p>
 			</div>
 			<div class="translation">
-				<h2 id="transtaltion" class="h2-heading">Переводы</h2>
-				<p>
+				<h2 class="h2-little-prince" id="transtaltion" class="h2-heading">Переводы</h2>
+				<p class="p-little-prince">
 					В 2017 году «Маленький принц» был опубликован на диалекте арабского языка хассания, на котором говорят на
 					юге Марокко и в Западной Сахаре, а также в Мавритании. Хассания стал трёхсотым языком, на котором
 					опубликовано это произведение[12]. А чуть позже вышел 301-й перевод повести — на осетинском языке[13]. По
@@ -130,7 +130,7 @@
 					<li class="publications-list">креольском на Кюрасао</li>
 					<li class="publications-list">гасконском во Франции</li>
 				</ul>
-				<p>
+				<p class="p-little-prince">
 					В Индии существуют издания на хинди, телугу, маратхи, панджаби, тамильском, малаялам, бенгальском и
 					конкани.
 					Профессор латинского языка и литературы в университете Бордо Огюст Ори в 1961 году впервые перевёл
@@ -142,22 +142,22 @@
 				<img class = "image-block" src="./img/collection.jpeg" alt="collection">
 			</div>
 			<div class="translation">
-				<h4 id="russian-translation" class="h3-heading">
+				<h4 class="h4-little-prince" id="russian-translation" class="h3-heading">
 					Переводы на русский язык
 				</h4>
-				<p>
-					На русском языке сказка впервые была опубликована в журнале «Москва» (1959, № 8) в переводе <a href="https://ru.wikipedia.org/wiki/%D0%9D%D0%BE%D1%80%D0%B0_%D0%93%D0%B0%D0%BB%D1%8C" target="_blank">Норы Галь</a> ,
-					выполненном в 1958 году. Согласно воспоминаниям Александры Раскиной (дочери писательницы <a href="https://ru.wikipedia.org/wiki/%D0%92%D0%B8%D0%B3%D0%B4%D0%BE%D1%80%D0%BE%D0%B2%D0%B0,_%D0%A4%D1%80%D0%B8%D0%B4%D0%B0_%D0%90%D0%B1%D1%80%D0%B0%D0%BC%D0%BE%D0%B2%D0%BD%D0%B0" target="_blank"> Фриды Вигдоровой</a>,
-					которая была подругой Галь), Нора Галь познакомилась с этой книгой благодаря литератору <a href="https://ru.wikipedia.org/wiki/%D0%9C%D1%83%D1%80%D0%B0%D0%B2%D1%8C%D1%91%D0%B2%D0%B0,_%D0%98%D1%80%D0%B8%D0%BD%D0%B0_%D0%98%D0%B3%D0%BD%D0%B0%D1%82%D1%8C%D0%B5%D0%B2%D0%BD%D0%B0" target="_blank">Ирине Муравьёвой</a> и
+				<p class="p-little-prince">
+					На русском языке сказка впервые была опубликована в журнале «Москва» (1959, № 8) в переводе <a class="a-little-prince" href="https://ru.wikipedia.org/wiki/%D0%9D%D0%BE%D1%80%D0%B0_%D0%93%D0%B0%D0%BB%D1%8C" target="_blank">Норы Галь</a> ,
+					выполненном в 1958 году. Согласно воспоминаниям Александры Раскиной (дочери писательницы <a class="a-little-prince" href="https://ru.wikipedia.org/wiki/%D0%92%D0%B8%D0%B3%D0%B4%D0%BE%D1%80%D0%BE%D0%B2%D0%B0,_%D0%A4%D1%80%D0%B8%D0%B4%D0%B0_%D0%90%D0%B1%D1%80%D0%B0%D0%BC%D0%BE%D0%B2%D0%BD%D0%B0" target="_blank"> Фриды Вигдоровой</a>,
+					которая была подругой Галь), Нора Галь познакомилась с этой книгой благодаря литератору <a class="a-little-prince" href="https://ru.wikipedia.org/wiki/%D0%9C%D1%83%D1%80%D0%B0%D0%B2%D1%8C%D1%91%D0%B2%D0%B0,_%D0%98%D1%80%D0%B8%D0%BD%D0%B0_%D0%98%D0%B3%D0%BD%D0%B0%D1%82%D1%8C%D0%B5%D0%B2%D0%BD%D0%B0" target="_blank">Ирине Муравьёвой</a> и
 					перевела её в подарок ближайшим друзьям[17], а затем Вигдорова на протяжении нескольких месяцев пыталась
 					договориться о публикации с московскими журналами, пока наконец в журнале «Москва», благодаря его
 					тогдашним
-					сотрудникам Евгении Ласкиной и <a href="https://ru.wikipedia.org/wiki/%D0%9E%D0%B2%D0%B0%D0%BB%D0%BE%D0%B2,_%D0%9B%D0%B5%D0%B2_%D0%A1%D0%B5%D1%80%D0%B3%D0%B5%D0%B5%D0%B2%D0%B8%D1%87" target="_blank">Льву Овалову</a> было принято положительное решение[18].
+					сотрудникам Евгении Ласкиной и <a class="a-little-prince" href="https://ru.wikipedia.org/wiki/%D0%9E%D0%B2%D0%B0%D0%BB%D0%BE%D0%B2,_%D0%9B%D0%B5%D0%B2_%D0%A1%D0%B5%D1%80%D0%B3%D0%B5%D0%B5%D0%B2%D0%B8%D1%87" target="_blank">Льву Овалову</a> было принято положительное решение[18].
 
-					Одновременно с этим, по сообщению поэта и критика <a href="https://ru.wikipedia.org/wiki/%D0%9A%D1%83%D0%B7%D1%8C%D0%BC%D0%B8%D0%BD,_%D0%94%D0%BC%D0%B8%D1%82%D1%80%D0%B8%D0%B9_%D0%92%D0%BB%D0%B0%D0%B4%D0%B8%D0%BC%D0%B8%D1%80%D0%BE%D0%B2%D0%B8%D1%87" target="_blank">Дмитрия Кузьмина</a> появилось не менее семи других переводов
+					Одновременно с этим, по сообщению поэта и критика <a class="a-little-prince" href="https://ru.wikipedia.org/wiki/%D0%9A%D1%83%D0%B7%D1%8C%D0%BC%D0%B8%D0%BD,_%D0%94%D0%BC%D0%B8%D1%82%D1%80%D0%B8%D0%B9_%D0%92%D0%BB%D0%B0%D0%B4%D0%B8%D0%BC%D0%B8%D1%80%D0%BE%D0%B2%D0%B8%D1%87" target="_blank">Дмитрия Кузьмина</a> появилось не менее семи других переводов
 					«Маленького принца»[19]. Среди них, в частности, перевод, который сделала в 1959 году известная
-					революционерка, а затем узница ГУЛАГа, <a href="https://ru.wikipedia.org/wiki/%D0%9A%D0%B0%D1%85%D0%BE%D0%B2%D1%81%D0%BA%D0%B0%D1%8F,_%D0%98%D1%80%D0%B8%D0%BD%D0%B0_%D0%9A%D0%BE%D0%BD%D1%81%D1%82%D0%B0%D0%BD%D1%82%D0%B8%D0%BD%D0%BE%D0%B2%D0%BD%D0%B0" target="_blank">Ирина Каховская</a> которая перевела её тоже в подарок для ближайшей
-					подруги <a href="https://ru.wikipedia.org/wiki/%D0%91%D0%B8%D0%B1%D0%B5%D1%80%D0%B3%D0%B0%D0%BB%D1%8C,_%D0%95%D0%BA%D0%B0%D1%82%D0%B5%D1%80%D0%B8%D0%BD%D0%B0_%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B0%D0%BD%D0%B4%D1%80%D0%BE%D0%B2%D0%BD%D0%B0" target="_blank">Екатерины Бибергаль</a> Давняя знакомая Каховской <a href="https://ru.wikipedia.org/wiki/%D0%9F%D0%B5%D1%88%D0%BA%D0%BE%D0%B2%D0%B0,_%D0%95%D0%BA%D0%B0%D1%82%D0%B5%D1%80%D0%B8%D0%BD%D0%B0_%D0%9F%D0%B0%D0%B2%D0%BB%D0%BE%D0%B2%D0%BD%D0%B0" target="_blank">Екатерина Пешкова </a> в том же 1959 году пыталась
+					революционерка, а затем узница ГУЛАГа, <a class="a-little-prince" href="https://ru.wikipedia.org/wiki/%D0%9A%D0%B0%D1%85%D0%BE%D0%B2%D1%81%D0%BA%D0%B0%D1%8F,_%D0%98%D1%80%D0%B8%D0%BD%D0%B0_%D0%9A%D0%BE%D0%BD%D1%81%D1%82%D0%B0%D0%BD%D1%82%D0%B8%D0%BD%D0%BE%D0%B2%D0%BD%D0%B0" target="_blank">Ирина Каховская</a> которая перевела её тоже в подарок для ближайшей
+					подруги <a class="a-little-prince" href="https://ru.wikipedia.org/wiki/%D0%91%D0%B8%D0%B1%D0%B5%D1%80%D0%B3%D0%B0%D0%BB%D1%8C,_%D0%95%D0%BA%D0%B0%D1%82%D0%B5%D1%80%D0%B8%D0%BD%D0%B0_%D0%90%D0%BB%D0%B5%D0%BA%D1%81%D0%B0%D0%BD%D0%B4%D1%80%D0%BE%D0%B2%D0%BD%D0%B0" target="_blank">Екатерины Бибергаль</a> Давняя знакомая Каховской <a class="a-little-prince" href="https://ru.wikipedia.org/wiki/%D0%9F%D0%B5%D1%88%D0%BA%D0%BE%D0%B2%D0%B0,_%D0%95%D0%BA%D0%B0%D1%82%D0%B5%D1%80%D0%B8%D0%BD%D0%B0_%D0%9F%D0%B0%D0%B2%D0%BB%D0%BE%D0%B2%D0%BD%D0%B0" target="_blank">Екатерина Пешкова </a> в том же 1959 году пыталась
 					устроить этот перевод в журнал «Иностранная литература», однако редакция журнала, признавая
 					художественные
 					достоинства перевода, поместить его отказалась по «идеологическим» мотивам[20]. Единственный из
@@ -167,10 +167,10 @@
 				</p>
 			</div>
 			<div class="prototypes">
-				<h2 id="hero-prototype" class="h2-heading">Прообразы героев</h2>
+				<h2 class="h2-little-prince" id="hero-prototype" class="h2-heading">Прообразы героев</h2>
 				<div class="prototype-little-prince">
-					<h4 class="h4-heading">Маленький принц</h4>
-					<p>Образ Маленького принца одновременно и глубоко автобиографичен, и как бы отстранён от взрослого
+					<h4 class="h4-little-prince" class="h4-heading">Маленький принц</h4>
+					<p class="p-little-prince">Образ Маленького принца одновременно и глубоко автобиографичен, и как бы отстранён от взрослого
 						автора-лётчика. Он рождён из тоски по умирающему в себе маленькому Тонио — потомку обнищавшего
 						дворянского рода, которого в семье называли за его белокурые (сперва) волосы «Королём-Солнцем», а в
 						коллеже прозвали Лунатиком за привычку подолгу смотреть на звёздное небо. Само словосочетание
@@ -182,14 +182,14 @@
 						астероидом Б-612.</p>
 				</div>
 				<div class="prototype-rose">
-					<h4 class="h4-heading">Роза</h4>
-					<p>Прообраз капризной и трогательной Розы тоже хорошо известен — это, безусловно, жена Экзюпери Консуэло
+					<h4 class="h4-little-prince" class="h4-heading">Роза</h4>
+					<p class="p-little-prince">Прообраз капризной и трогательной Розы тоже хорошо известен — это, безусловно, жена Экзюпери Консуэло
 						—
 						импульсивная латиноамериканка, которую друзья прозвали «маленьким сальвадорским вулканом».</p>
 				</div>
 				<div class="prototype-fox">
-					<h4 class="h4-heading">Лис</h4>
-					<p>Насчёт Лиса споров о прообразах и вариантах перевода было больше. Нора Галь в статье «Под звездой
+					<h4 class="h4-little-prince" class="h4-heading">Лис</h4>
+					<p class="p-little-prince">Насчёт Лиса споров о прообразах и вариантах перевода было больше. Нора Галь в статье «Под звездой
 						Сент-Экса» пишет:</p>
 					<blockquote>
 						Когда «Маленький принц» печатался у нас впервые, вышел жаркий спор в редакции: Лис в сказке или Лиса —
@@ -205,16 +205,16 @@
 						учит
 						всегда чувствовать себя в ответе за любимую и за всех близких и любимых.
 					</blockquote>
-					<p>Необычно большие уши Лиса на рисунке Экзюпери, скорее всего, навеяны маленькой пустынной лисичкой —
+					<p class="p-little-prince">Необычно большие уши Лиса на рисунке Экзюпери, скорее всего, навеяны маленькой пустынной лисичкой —
 						фенеком. Это было одно из многочисленных существ, приручённых писателем во время службы в Марокко.</p>
 				</div>
 			</div>
 			<div class="screening">
-				<h2 id="screening" class="h2-heading">Экранизации и постановки</h2>
+				<h2 class="h2-little-prince" id="screening" class="h2-heading">Экранизации и постановки</h2>
 				<div class="image center">
 					<img class = "image-block" src="./img/monument.jpeg" alt="Памятник Сент-Экзюпери со стоящим у него за спиной Маленьким принцем в Лионе, Франция">
 				</div>
-				<p>
+				<p class="p-little-prince">
 					Маленький принц был адаптирован к многочисленным видам искусства и средствам массовой информации, включая
 					аудиозаписи, радиопостановки, живую сцену, кино, телевидение, балет и оперу[10][21].
 
@@ -258,7 +258,7 @@
 			</div>
 		</main>
 		<footer>
-			<a href="./article.html" target="_blank">!!!!!! FIGMA ARTICLE !!!!!</a>
+			<a class="a-little-prince" href="./article.html" target="_blank">!!!!!! FIGMA ARTICLE !!!!!</a>
 		</footer>
 	</div>
 </body>
