--- a/article.html
+++ b/article.html
@@ -7,18 +7,20 @@
 	<title>Article - Lesson 5</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-	<div class="wrapper article">
+<body class="article">
+	<div class="wrapper-article">
 	<header>
 		<h1 class="article-h1">HR statistics: job search,  interviews, hiring and recruiting</h1>
 	</header>
 	<main>
-		<div>
-			<img class="article-image" src="./img/articleImage.png" alt="HR-Article-Image">
+		<div class="article-image">
+			<img class="article-img" src="./img/articleImage.png" alt="HR-Article-Image">
 		</div>
+		<div class="bold-text">
 		<p class="article-p bold-paragraph">
 			Vulputate vitae pellentesque scelerisque luctus consequat mattis pellentesque dui odio. Interdum aenean sit malesuada ornare sed gravida rhoncus, congue. Purus auctor nullam diam quis est hendrerit ac euismod. 
 		</p>
+	</div>
 		<p class="article-p second-paragraf ordinar-font">
 			At facilisi sapien posuere eget nunc senectus proin nullam. Tortor senectus in et sagittis, vitae diam cras dignissim. Varius adipiscing eget diam nisi. Orci, consectetur vulputate metus ornare pharetra, neque, fermentum. Vel nec rhoncus, non nunc, neque in massa. Feugiat leo nam nisl lacinia amet, odio. Mi varius viverra risus vel.
 		</p>
