--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 
-	<body>
+	<body class="little-prince">
 		<div class="wrapper">
 			<header>
 				<h1 id="heading">Маленький принц</h1>
