--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					</div>
 					<div class="paralel-box">
 						<div class="history">
-							<h2 class="h2-little-prince" id="publication" class="h2-heading">История публикаций</h2>
+							<h2 class="h2-little-prince" id="publication">История публикаций</h2>
 							<p class="p-little-prince">
 								Сент-Экзюпери написал повесть, живя в Нью-Йорке, куда переехал после того, как нацистская Германия
 								оккупировала Францию, и поэтому самая первая публикация книги, выпущенная издательством
@@ -98,7 +98,7 @@
 							</p>
 						</div>
 						<div class="plot">
-							<h2 class="h2-little-prince" id="plot" class="h2-heading">Сюжет</h2>
+							<h2 class="h2-little-prince" id="plot">Сюжет</h2>
 							<p class="p-little-prince">
 								Пилот совершает вынужденную посадку в пустыне Сахара и встречает одного необыкновенного и загадочного
 								мальчика — Маленького принца с другой планеты — астероида Б-612. Маленький принц рассказывает о своих
@@ -127,7 +127,7 @@
 					</div>
 				</div>
 				<div class="translation">
-					<h2 class="h2-little-prince" id="transtaltion" class="h2-heading">Переводы</h2>
+					<h2 class="h2-little-prince" id="transtaltion">Переводы</h2>
 					<p class="p-little-prince">
 						В 2017 году «Маленький принц» был опубликован на диалекте арабского языка хассания, на котором говорят на
 						юге Марокко и в Западной Сахаре, а также в Мавритании. Хассания стал трёхсотым языком, на котором
@@ -154,7 +154,7 @@
 					<img class="image-block" src="./img/collection.jpeg" alt="collection">
 				</div>
 				<div class="translation">
-					<h4 class="h4-little-prince" id="russian-translation" class="h3-heading">
+					<h4 class="h4-little-prince" id="russian-translation">
 						Переводы на русский язык
 					</h4>
 					<p class="p-little-prince">
@@ -198,9 +198,9 @@
 					</p>
 				</div>
 				<div class="prototypes">
-					<h2 class="h2-little-prince" id="hero-prototype" class="h2-heading">Прообразы героев</h2>
+					<h2 class="h2-little-prince" id="hero-prototype">Прообразы героев</h2>
 					<div class="prototype-little-prince">
-						<h4 class="h4-little-prince" class="h4-heading">Маленький принц</h4>
+						<h4 class="h4-little-prince">Маленький принц</h4>
 						<p class="p-little-prince">Образ Маленького принца одновременно и глубоко автобиографичен, и как бы
 							отстранён от взрослого
 							автора-лётчика. Он рождён из тоски по умирающему в себе маленькому Тонио — потомку обнищавшего
@@ -214,14 +214,14 @@
 							астероидом Б-612.</p>
 					</div>
 					<div class="prototype-rose">
-						<h4 class="h4-little-prince" class="h4-heading">Роза</h4>
+						<h4 class="h4-little-prince">Роза</h4>
 						<p class="p-little-prince">Прообраз капризной и трогательной Розы тоже хорошо известен — это, безусловно,
 							жена Экзюпери Консуэло
 							—
 							импульсивная латиноамериканка, которую друзья прозвали «маленьким сальвадорским вулканом».</p>
 					</div>
 					<div class="prototype-fox">
-						<h4 class="h4-little-prince" class="h4-heading">Лис</h4>
+						<h4 class="h4-little-prince">Лис</h4>
 						<p class="p-little-prince">Насчёт Лиса споров о прообразах и вариантах перевода было больше. Нора Галь в
 							статье «Под звездой
 							Сент-Экса» пишет:</p>
@@ -245,7 +245,7 @@
 					</div>
 				</div>
 				<div class="screening">
-					<h2 class="h2-little-prince" id="screening" class="h2-heading">Экранизации и постановки</h2>
+					<h2 class="h2-little-prince" id="screening">Экранизации и постановки</h2>
 					<div class="image center">
 						<img class="image-block" src="./img/monument.jpeg"
 							alt="Памятник Сент-Экзюпери со стоящим у него за спиной Маленьким принцем в Лионе, Франция">
